<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="com.adi.doctordoctor.models.Doctor"/>
        <variable
            name="doctor"
            type="Doctor" />
    </data>

    <ScrollView
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:orientation="vertical"
            android:background="@color/white"
            tools:context=".activities.RegisterActivity"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/basic_details"
                android:textSize="24sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/feel_free_to_fill_your_details"
                android:layout_gravity="center_horizontal"
                android:textColor="@android:color/darker_gray"
                android:layout_marginTop="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/full_name"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:layout_marginStart="25dp"
                android:layout_marginTop="50dp" />

            <EditText
                android:id="@+id/name_et"
                android:autofillHints="name"
                android:inputType="textPersonName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={doctor.name}"
                android:hint="@string/name_hint"
                android:textColorHint="@android:color/darker_gray"
                android:textColor="@color/black"
                android:background="@drawable/et_bg"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="5dp"
                android:padding="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_id_hint"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:layout_marginStart="25dp"
                android:layout_marginTop="15dp" />

            <EditText
                android:id="@+id/email_id_et"
                android:autofillHints="emailAddress"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={doctor.email}"
                android:hint="@string/email_id_hint"
                android:textColorHint="@android:color/darker_gray"
                android:textColor="@color/black"
                android:background="@drawable/et_bg"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="5dp"
                android:padding="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:layout_marginStart="25dp"
                android:layout_marginTop="15dp" />

            <com.google.android.material.tabs.TabLayout android:id="@+id/gender_tab_layout"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:layout_marginHorizontal="15dp"
                android:background="@color/white"
                app:tabBackground="@drawable/gender_tab_selector"
                app:tabIndicatorHeight="0dp"
                app:tabSelectedTextColor="@color/white"
                app:tabTextColor="@android:color/holo_orange_dark"
                app:tabTextAppearance="@style/TabItemTextAppearance"
                app:tabUnboundedRipple="false">

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/others" />

            </com.google.android.material.tabs.TabLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/practicing_from"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:layout_marginStart="25dp"
                android:layout_marginTop="15dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <EditText
                    android:id="@+id/from_month_et"
                    android:autofillHints="creditCardExpirationMonth"
                    android:inputType="number"
                    android:maxLength="2"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@={doctor.practice_frm_month}"
                    android:hint="@string/months"
                    android:textColorHint="@android:color/darker_gray"
                    android:textColor="@color/black"
                    android:background="@drawable/et_bg"
                    android:layout_marginEnd="25dp"
                    android:padding="5dp" />

                <EditText
                    android:id="@+id/from_year_et"
                    android:autofillHints="creditCardExpirationYear"
                    android:inputType="number"
                    android:maxLength="4"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@={doctor.practice_frm_year}"
                    android:hint="@string/year"
                    android:textColorHint="@android:color/darker_gray"
                    android:textColor="@color/black"
                    android:background="@drawable/et_bg"
                    android:layout_marginStart="25dp"
                    android:padding="5dp" />

            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@color/white"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="25dp"
                app:cardElevation="15dp"
                app:cardCornerRadius="25dp">

                <ImageView
                    android:id="@+id/continue_btn"
                    android:contentDescription="@string/continue_btn"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/ic_continue_arrow" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>
</layout>
