<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#f6f6f6">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/home_bg"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/profile_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardElevation="5dp"
                app:cardCornerRadius="10dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/happy_doc" />

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_toEndOf="@+id/profile_img"
                android:layout_alignTop="@+id/profile_img"
                android:layout_marginStart="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hello"
                    android:textColor="@color/black" />

                <TextView android:id="@+id/user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Aditya Gaikwad!"
                    android:maxEms="8"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="22sp" />

            </LinearLayout>

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_notification_bell"
                android:layout_alignParentEnd="true"
                android:contentDescription="@string/notification_bell"
                android:layout_marginTop="35dp"
                android:layout_marginEnd="25dp" />

            <androidx.cardview.widget.CardView
                android:id="@+id/search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/profile_img"
                app:cardElevation="25dp"
                app:cardCornerRadius="25dp"
                android:layout_marginTop="30sp"
                android:layout_marginHorizontal="40dp">

                <EditText
                    android:id="@+id/search_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="name"
                    android:inputType="textWebEditText"
                    android:background="@drawable/et_bg"
                    android:hint="@string/search"
                    android:textColorHint="@android:color/darker_gray"
                    android:textColor="@color/black"
                    android:drawableStart="@drawable/ic_search"
                    android:drawablePadding="10dp"
                    android:padding="15dp" />

            </androidx.cardview.widget.CardView>

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/view_pager_home"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/search"
                android:layout_marginTop="25dp"
                android:padding="5dp"
                android:layout_marginHorizontal="20dp"/>

            <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
                android:id="@+id/dots_indicator"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/view_pager_home"
                android:layout_width="wrap_content"
                android:layout_height="3dp"
                app:dotsColor="@android:color/darker_gray"
                app:dotsSpacing="4dp"
                app:dotsWidthFactor="2.5"
                app:selectedDotColor="@android:color/holo_orange_dark"
                />

            <TextView
                android:id="@+id/static_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/at_your_fingertip"
                android:textSize="22sp"
                android:layout_below="@id/dots_indicator"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginTop="25dp"
                android:layout_marginStart="30sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/ft_recycler_view"
                tools:listitem="@layout/fingertip_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/static_text"
                android:layout_marginTop="25dp"
                android:layout_marginHorizontal="15sp" />

        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>
</layout>